# bsky-bot-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: command_bot.rs  dm_bot.rs  follow_back.rs  keyword_stream.rs  media_bot.rs  mention_bot.rs  moderation_bot.rs  paginated_reads.rs  persistent_bot.rs  reactor.rs  scheduled_poster.rs  self_label_bot.rs  thread_bot.rs
src/: bot.rs  command.rs  config.rs  context.rs  dedup.rs  dm.rs  embed.rs  error.rs  event.rs  handler.rs  lib.rs  prelude.rs  ratelimit.rs  read.rs  retry.rs  schedule.rs  self_label.rs  store.rs  stream.rs  testkit.rs  thread.rs
tests/: testkit_usage.rs
