[package]
name = "bsky-bot-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "An ergonomic, event-driven SDK for building Bluesky (AT Protocol) bots in Rust, on top of atrium's bsky-sdk."
repository = "https://github.com/ochronus/bsky-bot-sdk"
homepage = "https://github.com/ochronus/bsky-bot-sdk"
documentation = "https://docs.rs/bsky-bot-sdk"
keywords = ["bluesky", "atproto", "bot", "atrium", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# Underlying Bluesky client + generated AT Protocol types.
bsky-sdk = "0.1.24"
atrium-api = "0.25.8"

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
] }
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[[example]]
name = "mention_bot"
path = "examples/mention_bot.rs"

[[example]]
name = "follow_back"
path = "examples/follow_back.rs"

[[example]]
name = "reactor"
path = "examples/reactor.rs"
