[package]
name = "bsky-bot-sdk"
version = "0.4.0"
edition = "2024"
# 1.88 is the true floor: the transitive `base45` crate (via multibase → cid →
# ipld-core → atrium-api) uses `<[T]>::as_chunks`, stabilised in Rust 1.88,
# despite under-declaring its own MSRV.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "An ergonomic, event-driven SDK for building Bluesky (AT Protocol) bots in Rust, on top of atrium's bsky-sdk."
repository = "https://github.com/ochronus/bsky-bot-sdk"
homepage = "https://github.com/ochronus/bsky-bot-sdk"
documentation = "https://docs.rs/bsky-bot-sdk"
keywords = ["bluesky", "atproto", "bot", "atrium", "sdk"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
# Underlying Bluesky client + generated AT Protocol types.
bsky-sdk = "0.1.24"
atrium-api = "0.25.8"

tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
] }
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Scheduling: wall-clock time (already in the tree via atrium), cron-expression
# parsing (5- and 6-field plus @daily-style macros), and simple human-interval
# syntax ("30s", "5m", "1h30m").
chrono = { version = "0.4", default-features = false, features = ["clock"] }
croner = "3"
humantime = "2"

# Real-time ingestion (Jetstream): a WebSocket client using native-tls, which
# matches the TLS backend reqwest already pulls in — no second TLS stack. Only
# the uncompressed JSON stream is consumed, so `zstd` is deliberately not a
# dependency. `futures-util` provides the Stream/Sink extension traits.
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = [
    "std",
    "sink",
] }

# Media & embeds: fetching OpenGraph metadata for link cards and driving the
# Bluesky video-upload service. reqwest is already in the tree (atrium's default
# client) and uses native-tls — the same TLS backend as tokio-tungstenite, so no
# second TLS stack is added. `gzip` lets us read compressed HTML for link cards.
reqwest = { version = "0.12", features = ["gzip"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[[example]]
name = "mention_bot"
path = "examples/mention_bot.rs"

[[example]]
name = "follow_back"
path = "examples/follow_back.rs"

[[example]]
name = "reactor"
path = "examples/reactor.rs"

[[example]]
name = "scheduled_poster"
path = "examples/scheduled_poster.rs"

[[example]]
name = "keyword_stream"
path = "examples/keyword_stream.rs"

[[example]]
name = "media_bot"
path = "examples/media_bot.rs"
